--- a/crud-spring/src/main/resources/application.properties
+++ b/crud-spring/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.show-sql=true
+#http://localhost:8080/h2-console/
 
+# url - link utilizado
+# driverClassName - utilizando driver do h2 
+# username - usuário padrão
+# password - senha de acesso ao browser do BD
+# database-platform - dialeto, informações do h2
+# show-sql - mostra qual sql tá gerando; em produção não é boa prática, false
+# link de acesso ao banco de dados
